--- a/language-libraries/dryad/plugin.xml
+++ b/language-libraries/dryad/plugin.xml
@@ -4,7 +4,7 @@
    <extension
          point="org.sugarj.language">
       <languagePlugin
-            id="org.sugarj.dryad">
+            id="org.sugarj.language.dryad">
       </languagePlugin>
    </extension>
 </plugin>
